# Life-coach-acgent-desktop

./: .gitignore  AI_COACHING_SETUP.md  AI_COACH_EXPLAINED.md  BEHAVIOR_ENGINE_SUMMARY.md  BROWSER_EXTENSION_INSTALL.md  BROWSER_TAB_TRACKING.md  CALIBRATION_COMPLETE.md  COMPLETE_FLOW_EXPLANATION.md  COMPLETE_SETUP.md  COMPLETE_UPGRADE_SUMMARY.md  CONFIG_DEBUG.md  CORS_FIX.md  DEBUG.md  DEBUG_METRICS.md  DESKTOP_OAUTH_SETUP.md  ENV_LOADING_GUIDE.md  GOOGLE_CONSOLE_FIX.md  GOOGLE_OAUTH_FIX.md  GOOGLE_OAUTH_SETUP.md  NEXT_STEPS.md  NOTIFICATION_SETUP.md  PRODUCTION_UPGRADE_COMPLETE.md  PRODUCT_FLOW_AND_MONETIZATION.md  PRODUCT_OVERVIEW.md  PROJECT_OVERVIEW.md  QUICK_FIX_METRICS.md  QUICK_FIX_REDIRECT_URI.md  QUICK_START.md  README.md  RESTART_BACKEND.md  RUNNING.md  SCREEN_RECORDING_VS_EXTENSION.md  SUPABASE_SETUP.md  UI_INTEGRATION_SUMMARY.md  UPGRADE_COMPLETE.md  WHITE_SCREEN_DEBUG.md  WHITE_SCREEN_DIAGNOSTIC.md  check-dev-server.sh  deploy.sh  index.html  (+6 more)
browser-extension/: README.md  background.js  manifest.json
python-backend/: BEHAVIOR_ENGINE.md  CALIBRATION_SUMMARY.md  README.md  main.py  mcp_server.py  requirements.txt  test_behavior.py  test_endpoints.py  test_nudges.py  verify_openai.py
python-backend/agents/: base.py  data_collector.py  flow_agent.py  morning_briefing.py  probability.py  researcher.py  smart_nudge.py  strategy.py
python-backend/ai/: __init__.py  daily_report.py  goal_parser.py
python-backend/behavior/: __init__.py  ai_coach.py  browser.py  categorizer.py  models.py  nudges.py  persistence.py  tracker.py
python-backend/core/: orchestrator.py
src/: App.css  App.tsx  index-simple.html  index.css  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  os_integration.rs  tray.rs
supabase/: schema.sql
(+74 files in other folders)
